# ImageProcessing

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Source/: AlignedMemory.cpp  AlignedMemory.h  Avg5.cpp  Avg5.h  Chronometer.cpp  Chronometer.h  Image.h  ImageTools.cpp  ImageTools.h  Main.cpp  Operator.h  OptimizationLevel.h  PeronaMalik.cpp  PeronaMalik.h  SIMD.h
Source/IPSLEngine/: IPSLAbstractSyntaxTree.h  IPSLAbstractSyntaxTreeBuilder.cpp  IPSLAbstractSyntaxTreeBuilder.h  IPSLBlackboard.h  IPSLEnvironment.cpp  IPSLEnvironment.h  IPSLError.cpp  IPSLError.h  IPSLLexer.cpp  IPSLLexer.h  IPSLLocation.h  IPSLParser.cpp  IPSLParser.h  IPSLToken.h  IPSLValue.cpp  IPSLValue.h
